[package]
name = "dbz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
config = { version = "0.13", features = ["toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
